--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -1,4 +1,5 @@
 chromedriver=/chromedriver.exe
+geckodriver=/geckodriver.exe
 authPage=https://cryptopanic.com/accounts/login/
 mainPage=https://cryptopanic.com/
 comment=That's cool
