--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -3,7 +3,6 @@ geckodriver=/geckodriver.exe
 authPage=https://cryptopanic.com/accounts/login/
 mainPage=https://cryptopanic.com/
 profilePage=https://cryptopanic.com/kirillova200133/
-accountsSettingsPage=https://cryptopanic.com/accounts/settings/
-comment=That's cool
+accountsSettingsPage=https://cryptopanic.com/accounts/settings
 login=kirillova200133
 password=7845661320Kir
