--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -4,5 +4,6 @@ authPage=https://cryptopanic.com/accounts/login/
 mainPage=https://cryptopanic.com/
 profilePage=https://cryptopanic.com/kirillova200133/
 accountsSettingsPage=https://cryptopanic.com/accounts/settings
+oasisPage=https://cryptopanic.com/links/new
 login=kirillova200133
 password=7845661320Kir
