added test for create new poll

--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -5,5 +5,6 @@ mainPage=https://cryptopanic.com/
 profilePage=https://cryptopanic.com/kirillova200133/
 accountsSettingsPage=https://cryptopanic.com/accounts/settings
 oasisPage=https://cryptopanic.com/links/new
+pollsPage=https://cryptopanic.com/polls
 login=kirillova200133
 password=7845661320Kir
