added test for delete comment

--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -3,6 +3,7 @@ geckodriver=/geckodriver.exe
 authPage=https://cryptopanic.com/accounts/login/
 mainPage=https://cryptopanic.com/
 profilePage=https://cryptopanic.com/kirillova200133/
+accountsCommentsPage=https://cryptopanic.com/kirillova200133/comments
 accountsSettingsPage=https://cryptopanic.com/accounts/settings
 oasisPage=https://cryptopanic.com/links/new
 pollsPage=https://cryptopanic.com/polls
