added test for add coin to portfolio

--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -7,5 +7,6 @@ accountsCommentsPage=https://cryptopanic.com/kirillova200133/comments
 accountsSettingsPage=https://cryptopanic.com/accounts/settings
 oasisPage=https://cryptopanic.com/links/new
 pollsPage=https://cryptopanic.com/polls
+portfolioPage=https://cryptopanic.com/kirillova200133/portfolio/
 login=kirillova200133
 password=7845661320Kir
